k8s/infrastructure/controllers/intel-device-plugins/CiliumNetworkPolicy.gpu.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gpu-ingress
  namespace: intel-device-plugins
spec:
  endpointSelector: {matchLabels: {app: intel-gpu-plugin}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Host probes
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gpu-egress
  namespace: intel-device-plugins
spec:
  endpointSelector: {matchLabels: {app: intel-gpu-plugin}}
  egress:
    - {toEntities: [kube-apiserver]}
