k8s/infrastructure/controllers/intel-device-plugins/CiliumNetworkPolicy.operator.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-operator-ingress
  namespace: intel-device-plugins
spec:
  endpointSelector: {matchLabels: {control-plane: controller-manager}}
  ingress:
    - {fromEntities: [host], toPorts: [{ports: [{port: '8081', protocol: TCP}]}]}  # Host health probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: kube-system, component: kube-apiserver}], toPorts: [{ports: [{port: '9443', protocol: TCP}]}]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-operator-egress
  namespace: intel-device-plugins
spec:
  endpointSelector: {matchLabels: {control-plane: controller-manager}}
  egress:
    - {toEntities: [kube-apiserver]}
